--- a/front-end/src/containers/Root/styles/styles.scss
+++ b/front-end/src/containers/Root/styles/styles.scss
@@ -14,9 +14,10 @@
     box-shadow: 0px 1px 2px rgba(0,0,0,0.05);
   }
 
-  // .app-footer {
-  //   flex: 0 0 $footer-height;
-  // }
+  .app-footer {
+    height: $footer-height;
+    background-color: $bg-footer-primary;
+  }
 
   .app-body {
     // display: flex;
