[FE] use bootstrap container / col for featured menu items section

--- a/front-end/src/containers/Home/styles.scss
+++ b/front-end/src/containers/Home/styles.scss
@@ -35,11 +35,15 @@
     flex-direction: column;
 
     .div-featured-menus {
-      display: flex;
-      justify-content: center;
-      width: 100%;
-      text-align: center;
+      max-width: calc(100% - 200px);
       margin-top: 70px;
+      padding-left: 0px;
+      padding-right: 0px;
+
+      .div-featured-menu-wrapper {
+        padding-left: 0px;
+        padding-right: 0px;
+      }
     }
 
     .div-all-products-container {
