--- a/front-end/src/containers/Home/components/HowItWorks/styles.scss
+++ b/front-end/src/containers/Home/components/HowItWorks/styles.scss
@@ -45,6 +45,7 @@
     left: 50%;
     transform: translateX(-50%) translateY(-50%);
     max-height: 800px;
+    max-width: 90%;
   }
 
   .div-how-it-works-left {
