--- a/front-end/src/styles/_custom.scss
+++ b/front-end/src/styles/_custom.scss
@@ -39,6 +39,13 @@ input {
 
 .clickable {
   cursor: pointer;
+  -webkit-touch-callout: none;
+  -webkit-user-select: none;
+  -khtml-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+  outline: 0;
 }
 
 // ::-webkit-scrollbar {
