--- a/front-end/src/containers/Root/styles/styles.scss
+++ b/front-end/src/containers/Root/styles/styles.scss
@@ -30,7 +30,9 @@
 .header-fixed {
   .app-header {
     position: fixed;
-    width: 100%;
+    top: 0;
+    right: 0;
+    left: 0;
     z-index: $zindex-header;
   }
   .app-body {
