--- a/front-end/src/containers/MenuModal/styles.scss
+++ b/front-end/src/containers/MenuModal/styles.scss
@@ -2,8 +2,10 @@
 
 .div-menu-modal-container {
   position: fixed;
-  width: 100%;
-  height: 100%;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
   background-color: rgba(0, 0, 0, 0.44);
   z-index: $zindex-modal;
 
