--- a/front-end/src/containers/Home/components/HowItWorks/styles.scss
+++ b/front-end/src/containers/Home/components/HowItWorks/styles.scss
@@ -33,7 +33,7 @@
     }
 
     .div-how-it-works-description {
-      font-size: 28px;
+      font-size: $footer-secondary-font-size;
       color: $text-light-gray;
       text-align: left;
     }
