--- a/front-end/src/containers/Home/components/LocationSearchField/styles.scss
+++ b/front-end/src/containers/Home/components/LocationSearchField/styles.scss
@@ -35,7 +35,7 @@
 
     span {
       font-family: 'Lato-Bold';
-      font-size: 17px;
+      font-size: $small-font-size;
       color: $text-gray;
       line-height: 66px;
     }
