--- a/front-end/src/containers/Menus/styles.scss
+++ b/front-end/src/containers/Menus/styles.scss
@@ -47,8 +47,8 @@
         background-color: #F2FFF3;
         width: 333px;
         height: 94px;
-        border-radius: 47px; 
-        font-size: 28px;
+        border-radius: 100px; 
+        font-size: $footer-secondary-font-size;
         text-align: center;
         line-height: 94px;
         margin-top: 24px;
