--- a/front-end/src/styles/variables/_fonts.scss
+++ b/front-end/src/styles/variables/_fonts.scss
@@ -3,6 +3,7 @@ $medium-font-size: 35px;
 $large-font-size: 48px;
 $small-font-size: 17px;
 $extra-font-size: 80px;
+$minor-font-size: 12px;
 
 $footer-primary-font-size: 23px;
 $footer-secondary-font-size: 26px;
