--- a/front-end/src/components/Button/styles.scss
+++ b/front-end/src/components/Button/styles.scss
@@ -4,7 +4,7 @@
   background: $bg-green;
   border: 1px solid #108915;
   border-radius: 4px;
-  box-shadow: 0px 3px 6px rgba(0, 0, 0, .16);
+  box-shadow: $shadow-primary;
   color: #fff;
   cursor: pointer;
   display: inline-block;
