--- a/front-end/src/components/RadioButton/styles.scss
+++ b/front-end/src/components/RadioButton/styles.scss
@@ -1,3 +1,5 @@
+@import "../../styles/variables/variables";
+
 .radio-button {
   display: flex;
   flex-direction: row;
@@ -11,6 +13,6 @@
 
   span {
     color: #1A1A1A;
-    font-size: 22px;
+    font-size: $footer-primary-font-size;
   }
 }
