--- a/front-end/src/containers/Checkout/components/OrderSummary/styles.scss
+++ b/front-end/src/containers/Checkout/components/OrderSummary/styles.scss
@@ -2,15 +2,15 @@
 
 $padding: 40px;
 $margin: 20px;
-$shadow: 0px 3px 6px rgba(0,0,0,0.16);
+$order-summary-header-height: 108px;
 
 .order-summary-container {
   background-color: white;
   border: 1px solid #B7CBB8;
-  box-shadow: $shadow;
+  box-shadow: $shadow-primary;
 
   .order-summary-header {
-    height: 107px;
+    height: $order-summary-header-height;
     background-color: $bg-gray;
     padding-left: $padding;
     padding-right: $padding;
@@ -19,7 +19,7 @@ $shadow: 0px 3px 6px rgba(0,0,0,0.16);
     flex-direction: row;
     justify-content: space-between; 
     align-items: center;
-    font-size: 27px;
+    font-size: $footer-secondary-font-size;
 
     .order-summary-title {
       color: $text-light-gray;
@@ -109,7 +109,7 @@ $shadow: 0px 3px 6px rgba(0,0,0,0.16);
       display: flex;
       flex-direction: row;
       justify-content: space-between;
-      font-size: 27px;
+      font-size: $footer-secondary-font-size;
 
       .order-summary-items-title {
         color: $text-light-gray;  
