--- a/front-end/src/containers/Checkout/components/OrderedItem/styles.scss
+++ b/front-end/src/containers/Checkout/components/OrderedItem/styles.scss
@@ -1,21 +1,19 @@
 @import "../../../../styles/variables/variables";
 
+$ordered-item-size: 120px;
+
 .ordered-item {
   display: flex;
   flex-direction: row;
 
   img {
-    width: 120px;
-    height: 120px;
+    width: $ordered-item-size;
+    height: $ordered-item-size;
   }
 
   .ordered-item-info {
     margin-left: 16px;
     color: $text-light-gray;
-    font-size: 27px;
-
-    .ordered-item-info-count {
-      margin-top: 0px;
-    }
+    font-size: $footer-secondary-font-size;
   }
 }
