--- a/front-end/src/containers/ContactUs/styles.scss
+++ b/front-end/src/containers/ContactUs/styles.scss
@@ -26,7 +26,7 @@
 
     .container {
       max-width: 980px;
-      box-shadow: 0px 3px 6px rgba(0,0,0,0.16);
+      box-shadow: $shadow-primary;
       background-color: white;
 
       .div-contact-us-form-title {
