--- a/front-end/src/containers/Root/styles/styles.scss
+++ b/front-end/src/containers/Root/styles/styles.scss
@@ -11,7 +11,7 @@
   .app-header {
     height: $header-height;
     background-color: white;
-    box-shadow: 0px 1px 2px rgba(0,0,0,0.05);
+    box-shadow: $shadow-primary;
   }
 
   .app-footer {
