--- a/front-end/src/containers/Home/components/LocationSearchField/styles.scss
+++ b/front-end/src/containers/Home/components/LocationSearchField/styles.scss
@@ -19,13 +19,14 @@
     caret-color: $bg-green;
   }
 
-  .div-locateme {
+  .btn-locate-me {
     width: 151px;
     text-align: center;
     background-color: $bg-gray;
     border: 1px solid $border-gray;
     border-radius: 4px;
     margin-right: 6px;
+    
 
     img {
       width: 19.25px;
