[FE] header, home page  +768px  responsive styling

--- a/front-end/src/containers/Home/components/HowItWorks/styles.scss
+++ b/front-end/src/containers/Home/components/HowItWorks/styles.scss
@@ -11,70 +11,106 @@
     height: 800px;
     overflow: hidden;
   }
+}
 
+.responsive-div-how-it-works {
+  display: none;
+}
+
+.div-how-it-works-center {
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  width: 60%;
+  transform: translateX(-50%) translateY(-50%);
+  display: flex;
+  flex-direction: column;
+
+  .div-how-it-works-step {
+    font-size: $medium-font-size;
+    text-align: left;
+  }
+
+  .div-how-it-works-title {
+    font-size: $extra-font-size;
+    color: $text-black;
+    text-align: left;
+  }
+
+  .div-how-it-works-description {
+    font-size: $footer-secondary-font-size;
+    color: $text-light-gray;
+    text-align: left;
+  }
+}  
+
+.img-how-it-works {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translateX(-50%) translateY(-50%);
+  max-height: 800px;
+  max-width: 90%;
+}
+
+.div-how-it-works-left {
   .div-how-it-works-center {
-    position: absolute;
-    left: 50%;
-    top: 50%;
-    width: 60%;
-    transform: translateX(-50%) translateY(-50%);
+    left: 60%;
+  }
+}
+
+.div-how-it-works-right {
+  .div-how-it-works-center {
+    left: 40%;
+  }
+}
+
+.div-how-it-works-view-all-products {
+  text-align: left;
+  margin-top: 30px;
+
+  .btn-all-products {
+    width: 294px;
+    height: 69px;
+    border-radius: 8px;
+    font-size: $regular-font-size;
+    
+    img {
+      width: 26px;
+      height: 26px;
+      margin-left: 20px;
+    }
+  }
+}
+
+@media (max-width: 768px) {
+  .div-how-it-works {
+    display: none;
+  }
+
+  .responsive-div-how-it-works {
+    display: block;
     display: flex;
     flex-direction: column;
-  
-    .div-how-it-works-step {
-      font-size: $medium-font-size;
-      text-align: left;
-    }
+    margin-top: 70px;
 
-    .div-how-it-works-title {
-      font-size: $extra-font-size;
-      color: $text-black;
-      text-align: left;
-    }
-
-    .div-how-it-works-description {
-      font-size: $footer-secondary-font-size;
-      color: $text-light-gray;
-      text-align: left;
-    }
-  }  
-
-  .img-how-it-works {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translateX(-50%) translateY(-50%);
-    max-height: 800px;
-    max-width: 90%;
-  }
-
-  .div-how-it-works-left {
     .div-how-it-works-center {
-      left: 60%;
-    }
-  }
-
-  .div-how-it-works-right {
-    .div-how-it-works-center {
-      left: 40%;
-    }
-  }
-
-  .div-how-it-works-view-all-products {
-    text-align: left;
-    margin-top: 30px;
-
-    .btn-all-products {
-      width: 294px;
-      height: 69px;
-      border-radius: 8px;
-      font-size: $regular-font-size;
-      
-      img {
-        width: 26px;
-        height: 26px;
-        margin-left: 20px;
+      position: relative;
+      left: 50%;
+      width: 80%;
+      top: unset;
+      transform: translateX(-50%);
+      .div-how-it-works-step, .div-how-it-works-title, .div-how-it-works-description, .div-how-it-works-view-all-products {
+        text-align: center;
       }
+    }
+
+    .img-how-it-works {
+      position: relative;
+      top: unset;
+      transform: translateX(-50%);
+      width: 60%;
+      margin-left: -5%;
     }
   }
 }
