--- a/front-end/src/containers/Root/components/Header/styles.scss
+++ b/front-end/src/containers/Root/components/Header/styles.scss
@@ -26,4 +26,26 @@
       text-align: center;
     }
   }
+
+  @media (max-width: 1024px) {
+    .img-logo {
+      margin-left: 40px;
+    }
+
+    .div-buttons {
+      margin-right: 30px;
+      margin-top: 34px;
+
+      .button {
+        width: 150px;
+        height: 50px;
+      }
+
+      .div-signup {
+        width: 130px;
+        height: 50px;
+        line-height: 50px;
+      }
+    }
+  }
 }
