[FE] home page bottom location search styling fix

--- a/front-end/src/containers/Home/styles.scss
+++ b/front-end/src/containers/Home/styles.scss
@@ -99,6 +99,7 @@
     background-color: $bg-gray;
     border: 1px solid #EBE2E2;
     margin-top: 100px;
+    padding: 0 20px;
    
     .div-location-search-container {
       position: relative;
