--- a/front-end/src/containers/Checkout/components/CheckoutStepForm/styles.scss
+++ b/front-end/src/containers/Checkout/components/CheckoutStepForm/styles.scss
@@ -59,6 +59,7 @@ $checkout-header-height: 108px;
       text-align: right;
 
       .btn-checkout-step-form {
+        width: unset;
         height: 73px;
         margin: 30px 50px 30px 0;
         padding-left: 40px;
